@@ -1,4 +1,4 @@
-function [eta_zero, eta_inf, lambda, m, R_square] = cross_model_fit(gamma_dot, eta_apparent, report)
+function [eta_zero, eta_inf, alpha, sigma2, R_square, eta_apparent_fit] = meter_fit(sigma, eta_apparent, report)
 % 3DFM function  
 % Rheology
 % last modified 2008.03.19
@@ -7,7 +7,7 @@ function [eta_zero, eta_inf, lambda, m, R_square] = cross_model_fit(gamma_dot, e
 % a materials apparent viscosity as a function of shear rate. The fitting parameters
 % as well as an R_square fitness value are provided as outputs.
 %  
-%  [eta_zero, eta_inf, lambda, m, R_square] = cross_model_fit(gamma_dot, eta_apparent, report);  
+%  [eta_zero, eta_inf, lambda, m, n, R_square, eta_fit] = carreau_model_fit(gamma_dot, eta_apparent, report);  
 %   
 %  where "gamma_dot" contains the input shear rates [s^-1].
 %        "eta_apparent" contains the apparent viscosity at the input shear rate.
@@ -17,31 +17,30 @@ function [eta_zero, eta_inf, lambda, m, R_square] = cross_model_fit(gamma_dot, e
 %        "eta_inf" is the damper parallel to the spring in [N s m^-1] 
 %        "lambda" is time constant for switch to thinning from non-thinning
 %        regime
-%        "m" is powerlaw slope of thinning regime
+%        "m" is index that controls the width of the thinning regime
+%        "n" is  related to the power law such that (n-1) is equal to
+%        powerlaw slope.
 %        "R_square" is the a measure of fitness.
 %
 
     % set parameters for the options structure sent to lsqcurvefit.
-	options = optimset('MaxFunEvals', 10000, ...
+	options = optimset('MaxFunEvals', 100000, ...
                        'Diagnostics', 'on', ...
-                       'TolFun', 1e-12, ...
-                       'MaxIter', 50000, ...
-                       'TolX', 1e-7, ...
+                       'TolFun', 1e-17, ...
+                       'MaxIter', 500000, ...
+                       'TolX', 1e-10, ...
                        'ShowStatusWindow', 'on');
 
 	% initial guess
-    m        = -0.8;
-    lambda   = 0.05;
-    eta_zero = 10;
-    eta_inf  = 0.01;
+    sigma2   = 0.1;
+    alpha    = 0.15;
+    eta_zero = eta_apparent(1);
+    eta_inf  = eta_apparent(end);
 
-% % %     % normalize t and x
-% % %     t = t - min(t);    
-% % %     x = x - min(x);
+    init_cond = [sigma2 alpha eta_zero eta_inf];
     
-    init_cond = [m lambda eta_zero eta_inf];
-    
-	[fit, resnorm, residuals] = lsqcurvefit('cross_model_fun', init_cond, gamma_dot, eta_apparent,[],[],options);
+	[fit, resnorm, residuals] = lsqcurvefit('meter_fun', init_cond, sigma, eta_apparent, [], [], options);
+% 	[fit, resnorm, residuals] = lsqnonlin('meter_fun', init_cond, [], [], options, sigma, eta_apparent);
 
     % standard deviation of measurements == rms of the residuals
 	rms_residuals = rms(residuals);
@@ -52,17 +51,17 @@ function [eta_zero, eta_inf, lambda, m, R_square] = cross_model_fit(gamma_dot, e
 	sst = sum((eta_apparent - mean(eta_apparent)).^2);
 	R_square = 1 - sse/sst;
 	    
-    m        = fit(1);
-	lambda   = fit(2);
+    sigma2   = fit(1);
+    alpha    = fit(2);
 	eta_zero = fit(3);
 	eta_inf  = fit(4);
-
+    
     % go to town.  this is our fitting function
-    eta_apparent_fit = (eta_zero - eta_inf) ./ (1+(lambda*gamma_dot).^ m) + eta_inf;
+    eta_apparent_fit = eta_inf + (eta_zero - eta_inf) ./ ( (1 + (sigma/sigma2).^(alpha-1)));
     
     if findstr(report, 'y')
         figure;
-        loglog(gamma_dot, eta_apparent, '.', gamma_dot, eta_apparent_fit, 'r-');
+        loglog(sigma, eta_apparent, '.', sigma, eta_apparent_fit, 'r-');
     end
     
 %     fit_params = [k0 k1 gamma0 gamma1];
