@@ -1,11 +1,11 @@
-function x = cross_model_fun(init_cond, gamma_dot, eta_apparent)
+function y = meter_model_fun(init_cond, sigma, eta_apparent)
 % 3DFM function  
 % Rheology
 % last modified 2008.03.19
 %  
 % This is the fitting function for cross_model_fit. 
 %  
-%  x = cross_model_fun(init_cond, gamma_dot, eta_apparent);
+%  x = carreau_model_fun(init_cond, gamma_dot, eta_apparent);
 %   
 %  where "init_cond" contains the parameters passed from lsqcurvefit.
 %        "gamma_dot" contains the input shear rates [s^-1].
@@ -15,12 +15,18 @@ function x = cross_model_fun(init_cond, gamma_dot, eta_apparent)
 
 
     % set guesses for fitting parameters
-    m        = init_cond(1);
-    lambda   = init_cond(2);
+    sigma2   = init_cond(1);
+    alpha    = init_cond(2);
     eta_zero = init_cond(3);
     eta_inf  = init_cond(4);
 
     % go to town.  this is our fitting function
-    x = (eta_zero - eta_inf) ./ (1+(lambda*gamma_dot).^ m) + eta_inf;
+    eta_apparent_fit = eta_inf + (eta_zero - eta_inf) ./ ( (1 + (sigma/sigma2).^(alpha-1)));
+    y = eta_apparent_fit;
     
+%     weights = [1:length(eta_apparent)]';
+%     y = (eta_apparent_fit - eta_apparent) ./ eta_apparent_fit;
     
+%     x = ((n-1)/m).*(log(eta_zero) + m.*log(lambda*gamma_dot));
+    
+
